--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-POSTGRES_URL="dbname=gopost user=lalai password=PoopLord69 host=localhost sslmode=disable"
+POSTGRES_URL="Postgres connection string"
